<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/biodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biodata"
        android:textSize="35sp"
        android:textColor="@color/font"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eclipse"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/eclipse"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/iyan2"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        style="@style/layoutBiodata"
        android:layout_marginTop="20dp"
        android:text="@string/nama" />
    <TextView
        style="@style/layoutBiodata"
        android:layout_marginTop="10dp"
        android:text="@string/nim" />
    <TextView
        style="@style/layoutBiodata"
        android:layout_marginTop="10dp"
        android:text="@string/ttl"/>
    <TextView
        style="@style/layoutBiodata"
        android:layout_marginTop="10dp"
        android:text="@string/email"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonArtikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/eclipsebutton"
            android:text="@string/buttonArtikel"
            android:gravity="center"
            android:layout_marginTop="20dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/buttonBeranda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/eclipsebutton"
            android:text="@string/buttonBeranda"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>