<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome"
            android:contentDescription="@string/welcome" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/artikel"
                android:src="@drawable/copywriting"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/artikel" />
            <ImageButton
                android:id="@+id/profile"
                android:src="@drawable/profileuser"
                android:layout_marginLeft="20dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/profile" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dark"
            android:text="@string/reserved"/>
    </FrameLayout>
</LinearLayout>